# rbc25_ws

./: README.md
arm_control/: package.xml  setup.py
arm_control/config/: vector_bridge.yaml
arm_control/launch/: domain_bridge.launch.py
gripper_arduino/: platformio.ini
gripper_arduino/src/: main.cpp
gripper_control/: package.xml  setup.py
gripper_control/gripper_control/: arm_moveit.py  gripper_control.py
gripper_control/launch/: arm_moveit_pose_goal.launch.py
human_follower/: package.xml  setup.cfg  setup.py
human_follower/human_follower/: deep_sort_tracker.py  goal_publisher.py  nvblox_detection.py  task_state.py  yolo_detector.py  yolo_detector2.py
human_follower/launch/: cml.launch.py
open_task/: package.xml  setup.cfg  setup.py
open_task/launch/: open_task.launch.py
open_task/open_task/: assistant_node.py  image_checker.py  last_task.py  voice_classifier.py
receptionist/: package.xml  setup.py
receptionist/launch/: receptionist.launch.py
receptionist/receptionist/: ask_name_and_drink.py  compare_and_find_host_service.py  compute_goal_pose.py  describe_generation.py  describe_guest.py  point.chair.py  task_state.py  task_state2.py
robot_face/: package.xml  setup.cfg  setup.py
robot_face/robot_face/: ask_name_and_drink.py  talk_face_node.py
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/msg/: BoundingBox.msg  Detections.msg  Tracks.msg
robot_interfaces/srv/: BagCentroid.srv  CompareAndFindHost.srv  CompareAndFindHostDir.srv  ComputeGoalPose.srv  DescribeGuest.srv  DescribeGuestSentence.srv  SegmentHumans.srv  SpeakText.srv
voice_recognition/: package.xml  setup.cfg  setup.py
voice_recognition/voice_recognition/: voice_recognition_node.py
wheeltec_mic_ros2/: CMakeLists.txt  package.xml
wheeltec_mic_ros2/config/msc/res/asr/GrmBuilld/: call.g  call_16K
wheeltec_mic_ros2/config/msc/res/asr/GrmBuilld/temp/: call.g  call_16K
wheeltec_mic_ros2/include/: command_recognition.h  user_interface.h  voice_record.h  wheeltec_mic.h
wheeltec_mic_ros2/launch/: base.launch.py  mic_init.launch.py
wheeltec_mic_ros2/src/: command_recognition.cpp  voice_control.cpp  voice_record.cpp  wheeltec_mic.cpp
wheeltec_robot_nav2/launch/: nvblox.launch.py  wheeltec_nav2.launch.py
wheeltec_robot_nav2/map/: 1.pgm  1.yaml  9floor.pgm  9floor.yaml  WHEELTEC.pgm  WHEELTEC.yaml  athome.pgm  athome.yaml  map2.pgm  map2.yaml  room1.pgm  room1.yaml
wheeltec_robot_nav2/param/bt/: follower_w_recovery.xml
wheeltec_robot_nav2/param/wheeltec_params/: nav2_param.yaml  nav2_param_2.yaml  param_senior_diff.yaml  param_senior_diff_2.yaml  param_senior_diff_3.yaml
wheeltec_robot_urdf/wheeltec_robot_urdf/meshes/S100_diff_robot_meshes/: gripper.stl  link3.stl
wheeltec_robot_urdf/wheeltec_robot_urdf/meshes/bases/: body.stl
wheeltec_robot_urdf/wheeltec_robot_urdf/meshes/wheels/: caster_left.stl  caster_right.stl  left_wheel.stl  right_wheel.stl
wheeltec_robot_urdf/wheeltec_robot_urdf/urdf/: brushless_senior_diff copy.urdf  brushless_senior_diff_2.urdf
yolo_detection/: package.xml  setup.py
yolo_detection/yolo_detection/: bag_identification.py  chair_detection.py  choose_bag.py  human_detection.py
