<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_face</name>
  <version>0.0.0</version>
  <description>
    ROS 2 node to display and animate a robot face along with TTS-generated speech.
  </description>
  <maintainer email="w3i.0425@gmail.com">robot11</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS build and execution dependencies -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  
  <!-- Dependency on the interfaces package containing custom service definitions -->
  <build_depend>robot_interfaces</build_depend>
  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>openai</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
